--- a/public/book.html
+++ b/public/book.html
@@ -93,11 +93,8 @@
          * 실제로는 서버에 요청을 보내야 하지만, 여기서는 플레이스홀더 이미지 URL을 반환합니다.
          */
         async function generateImageForParagraph(text, context = "") {
-            const res = await fetch('/.netlify/functions/stability-handler', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ prompt: `${text}\n${context}` })
-            });
+            const prompt = `${text}\n${context}`;
+            const res = await fetch(`/.netlify/functions/stability-handler?prompt=${encodeURIComponent(prompt)}`);
 
             let data;
             try {
