--- a/public/book.html
+++ b/public/book.html
@@ -114,7 +114,7 @@
                 throw new Error(message);
             }
 
-            const base64 = data.artifacts?.[0]?.base64;
+            const base64 = data.image || data.artifacts?.[0]?.base64;
             if (!base64) {
                 throw new Error('이미지 데이터가 없습니다.');
             }
