--- a/public/book.html
+++ b/public/book.html
@@ -679,11 +679,16 @@
 
                 const params = new URLSearchParams(window.location.search);
                 bookCode = params.get('code');
-                if (bookCode) {
-                    const bookRef = doc(db, 'Book', bookCode);
-                    const bookSnap = await getDoc(bookRef);
-                    if (bookSnap.exists()) {
-                        const data = bookSnap.data();
+                if (!bookCode) {
+                    bookCode = `book${Date.now()}`;
+                    params.set('code', bookCode);
+                    window.history.replaceState({}, '', `${window.location.pathname}?${params}`);
+                }
+
+                const bookRef = doc(db, 'Book', bookCode);
+                const bookSnap = await getDoc(bookRef);
+                if (bookSnap.exists()) {
+                    const data = bookSnap.data();
 
                         buildBookViewer();
 
@@ -751,10 +756,13 @@
                         updateBookView();
                         window.syncBookAuthor();
                     } else {
+                        await setDoc(bookRef, {
+                            author: window.authorName || '',
+                            createdAt: serverTimestamp()
+                        });
                         startManualBookCreation();
                     }
-                } else {
-                    startManualBookCreation();
+
                 }
             } else {
                 window.location.href = 'index.html';
